# shop

./: .gitignore
backend/: alembic.ini  pyproject.toml  shop.db
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_14_1729-c75645022452_.py
backend/app/: config.py  database.py
backend/app/models/: __init__.py  base.py  category.py  db_helper.py  mixins.py  product.py
